--- a/.github/workflows/convertadbtopihole.yml
+++ b/.github/workflows/convertadbtopihole.yml
@@ -41,6 +41,6 @@ jobs:
       run: |
         git diff
         git config --global user.email "c.cshah50@gmail.com"
-        git config --global user.name "GitHub Actions"
+        git config --global user.name "spydisec"
         git commit -am "Pi-hole blocklist update" || exit 0
         git push
