--- a/.github/workflows/testconvertfile.yml
+++ b/.github/workflows/testconvertfile.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Commit and push if it changed
       run: |
         git diff
-        git config --global user.email "actions@github.com"
-        git config --global user.name "GitHub Actions"
+        git config --global user.email "c.cshah50@gmail.com"
+        git config --global user.name "Spydi Sec"
         git commit -am "Pi-hole blocklist update" || exit 0
         git push
