--- a/.github/workflows/convertadbtopihole.yml
+++ b/.github/workflows/convertadbtopihole.yml
@@ -32,7 +32,7 @@ jobs:
         wget -O adblock.txt $url
 
         # Convert the filter list to a Pi-hole blocklist
-        grep -o '||.*^' adblock.txt | sed 's/||//;s/\^//' > pihole_blocklist.txt
+        grep -o '||.*^' adblock.txt | sed 's/||//;s/\^//' > pihole_oisd_nsfw.txt
 
         # Remove the downloaded filter list
         rm adblock.txt
