--- a/.github/workflows/master_osintlist.yml
+++ b/.github/workflows/master_osintlist.yml
@@ -44,10 +44,10 @@ jobs:
 
     - name: Commit and push if it changed
       run: |
-        git diff --quiet
+        git diff > /dev/null
         git config --global user.email "me@spydisec.online"
         git config --global user.name "spydisec"
-        git commit -am "Pi-hole OSINT.digitalside.it blocklist update"
+        git commit -am "Pi-hole OSINT.digitalside.it blocklist updated"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
