--- a/.github/workflows/master_osintlist.yml
+++ b/.github/workflows/master_osintlist.yml
@@ -19,8 +19,7 @@ jobs:
         python-version: '3.x'
 
     - name: Install dependencies
-      run: |
-        sudo apt-get install -y wget
+      run: sudo apt-get install -y wget
 
     - name: Run script
       run: |
@@ -30,24 +29,26 @@ jobs:
         # Download the latest domains
         wget -O latest_domains.txt $url
 
-        # Read each line in the latest domains file
+        # Extract non-commented domains from latest_domains.txt
+        grep -v '^#' latest_domains.txt > filtered_latest_domains.txt
+
+        # Append unique domains to the master list
         while IFS= read -r domain
         do
           # If the domain is not already in the master list, append it
-          if ! grep -q "$domain" pihole_collective_digitalside_osint.txt; then
+          if ! grep -q "^$domain$" pihole_collective_digitalside_osint.txt; then
             echo "$domain" >> pihole_collective_digitalside_osint.txt
           fi
-        done < latest_domains.txt
+        done < filtered_latest_domains.txt
 
         # Remove the downloaded latest domains
-        rm latest_domains.txt
+        rm latest_domains.txt filtered_latest_domains.txt
 
     - name: Commit and push if it changed
       run: |
-        git diff > /dev/null
-        git config --global user.email "me@spydisec.online"
-        git config --global user.name "spydisec"
-        git commit -am "Pi-hole OSINT.digitalside.it blocklist updated"
+        git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+        git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+        git diff --quiet || git commit -am "Pi-hole OSINT.digitalside.it blocklist updated"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
