--- a/.github/workflows/sefinek_dangersites_collective_list.yml
+++ b/.github/workflows/sefinek_dangersites_collective_list.yml
@@ -123,6 +123,7 @@ jobs:
           git diff > /dev/null
           git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
           git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+          git add $main_blocklist
           git commit -am "Pi-hole blocklist update" || exit 0
           git push
 
