--- a/.github/workflows/sefinek_dangersites_collective_list.yml
+++ b/.github/workflows/sefinek_dangersites_collective_list.yml
@@ -127,7 +127,7 @@ jobs:
           git diff > /dev/null
           git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
           git config --global user.name "${{ secrets.GIT_USER_NAME }}"
-          git add $main_blocklist
+          git add "sefinekBlockList/pihole_bl_sefinek_danger_sites.txt"
           git commit -am "Pi-hole blocklist update" || exit 0
           git push
 
