--- a/.github/workflows/sefinek_dangersites_collective_list.yml
+++ b/.github/workflows/sefinek_dangersites_collective_list.yml
@@ -106,13 +106,9 @@ jobs:
           )
 
           # Path for the main blocklist file
-          main_blocklist="sefinekBlockList\pihole_bl_sefinek_danger_sites.txt"
+          main_blocklist="sefinekBlockList\danger_sites.txt"
           mkdir -p sefinekBlockList
           : > $main_blocklist
-
-          # Debug: list files in the directory to verify the path
-          echo "Listing files in the sefinekBlockList directory:"
-          ls -l sefinekBlockList
 
           # Download, filter, and append each blocklist to the main blocklist file
           for url in "${urls[@]}"; do
