--- a/.github/workflows/sefinek_dangerlistonlydomains_collective_list.yml
+++ b/.github/workflows/sefinek_dangerlistonlydomains_collective_list.yml
@@ -21,6 +21,14 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get install -y wget
 
+      - name: Setup Git LFS
+        run: |
+          git lfs install
+          git lfs track "*.txt"
+          git add .gitattributes
+          git commit -m "Track .txt files with Git LFS" || exit 0
+          git push
+
       - name: Download and filter blocklists
         run: |
           # URLs of the blocklists
