--- a/.github/workflows/sefinek_dangerlistonlydomains_collective_list.yml
+++ b/.github/workflows/sefinek_dangerlistonlydomains_collective_list.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Setup Git LFS
         run: |
+          git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+          git config --global user.name "${{ secrets.GIT_USER_NAME }}"
           git lfs install
           git lfs track "*.txt"
           git add .gitattributes
