--- a/.github/workflows/adb2pihole_nsfw.yml
+++ b/.github/workflows/adb2pihole_nsfw.yml
@@ -42,7 +42,8 @@ jobs:
         git diff > /dev/null
         git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
         git config --global user.name "${{ secrets.GIT_USER_NAME }}"
-        git commit -am "Pi-hole blocklist update" || exit 0
+        DATE=$(date)
+        git commit -am "Pi-hole blocklist update - nsfw - $DATE" || exit 0
         git push
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
