--- a/.github/workflows/master_osintlist.yml
+++ b/.github/workflows/master_osintlist.yml
@@ -54,7 +54,8 @@ jobs:
       run: |
         git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
         git config --global user.name "${{ secrets.GIT_USER_NAME }}"
-        git diff --quiet || git commit -am "Pi-hole OSINT.digitalside.it blocklist updated"
+        DATE=$(date)
+        git diff --quiet || git commit -am "Pi-hole OSINT.digitalside.it blocklist updated - $DATE"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
