--- a/.github/workflows/sefinek_dangerlistonlydomains_collective_list.yml
+++ b/.github/workflows/sefinek_dangerlistonlydomains_collective_list.yml
@@ -134,7 +134,8 @@ jobs:
           git diff > /dev/null
           git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
           git config --global user.name "${{ secrets.GIT_USER_NAME }}"
-          git commit -am "Pi-hole blocklist update" || exit 0
+          DATE=$(date)
+          git commit -am "Pi-hole blocklist update - Sefinek Danger Sites - $DATE" || exit 0
           git push
 
 env:
