--- a/.github/workflows/sefinek_adsblocklist_collective_list.yml
+++ b/.github/workflows/sefinek_adsblocklist_collective_list.yml
@@ -2,8 +2,8 @@ name: Update Pi-hole Blocklist - Sefinek Ads, Analytics & Tracking
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 2 * * *'  # Runs every day at 2 AM UTC
+  #schedule:
+  #  - cron: '0 2 * * *'  # Runs every day at 2 AM UTC
 
 jobs:
   update:
